# mpv-racing-telemetry

./: .gitignore  AGENTS.md  Justfile  README.md  digit_model_best.pth  digit_model_v4.onnx  digit_ocr.lua  install.sh  main.lua  telemetry.lua  telemetry_core.lua  test.sh
.github/workflows/: release.yml
ml/: README.md  clean_labels.py  digit_model_v3.onnx  digit_model_v4.onnx  extract_training_data.py  label_corrections.json  pyproject.toml  retrain.py  train.py  train_gear.py  verify_labels.py
test/: frame_0370.raw  frame_0540.raw  frame_0550.raw  frame_0553.raw  frame_0558.raw  frame_0559.raw  frame_0865.raw  test_core.lua  test_real_frames.lua
