[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "pillow>=10,<12",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "trackio>=0.20",
]
